log
Fri 09 Sep 2022 04:31:48 PM UTC: 
 tests:  0|6
total_score: 0/70
a8edd5a
Fri 09 Sep 2022 04:48:19 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8c255f3
Fri 09 Sep 2022 05:02:20 PM UTC: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:10: error: unused variable ‘new’ [-Werror=unused-variable]
   43 |   Pair * new = createPair(key, value);
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
d84b1d8
Fri 09 Sep 2022 05:02:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:10: error: unused variable ‘new’ [-Werror=unused-variable]
   43 |   Pair * new = createPair(key, value);
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
201f607
Fri 09 Sep 2022 05:02:41 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ec2a8cf
Fri 09 Sep 2022 05:17:01 PM UTC: 
 hashmap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
3704d11
Fri 09 Sep 2022 05:17:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:42: error: invalid type argument of ‘->’ (have ‘long int’)
   46 |     if(!map->buckets[i] || !map->capacity->key){
      |                                          ^~
Compilation failed
fe81b84
Fri 09 Sep 2022 05:18:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:44: error: invalid operands to binary - (have ‘int’ and ‘char *’)
   46 |     if(!map->buckets[i] || !map->buckets[i]-key){
      |                            ~~~~~~~~~~~~~~~~^
      |                            |
      |                            int
Compilation failed
b3651f7
Fri 09 Sep 2022 05:18:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
bbb8baa
Fri 09 Sep 2022 05:25:27 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:80:3: error: ‘cont’ undeclared (first use in this function)
   80 |   cont = 0;
      |   ^~~~
hashmap.c:80:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:91:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   91 |     if(i = map->capacity) i=0;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
2b68a0a
Fri 09 Sep 2022 05:25:41 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:80:3: error: ‘cont’ undeclared (first use in this function)
   80 |   cont = 0;
      |   ^~~~
hashmap.c:80:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d2647b9
Fri 09 Sep 2022 05:25:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
766cc03
Fri 09 Sep 2022 05:32:22 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
d3cc50c
Sun 11 Sep 2022 03:25:00 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:105:22: error: subscripted value is neither array nor pointer nor vector
  105 |   while(!map->current[i]){
      |                      ^
hashmap.c:107:7: error: statement with no effect [-Werror=unused-value]
  107 |     i == map->capacity;
      |     ~~^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bd14253
Sun 11 Sep 2022 03:25:08 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:105:22: error: subscripted value is neither array nor pointer nor vector
  105 |   while(!map->current[i]){
      |                      ^
Compilation failed
c46a724
Sun 11 Sep 2022 03:25:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
5228aa5
Sun 11 Sep 2022 03:27:09 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
0e71296
Sun 11 Sep 2022 03:31:07 AM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
3779aeb
Sun 11 Sep 2022 03:43:21 AM UTC: 
 hashmap.c | 22 ++++++++--------------
 1 file changed, 8 insertions(+), 14 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:112:1: error: expected ‘;’ before ‘}’ token
  112 | }
      | ^
Compilation failed
fde7086
Sun 11 Sep 2022 03:44:03 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8dad7ae
Sun 11 Sep 2022 03:45:15 AM UTC: 
 hashmap.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  11|2
total_score: 50/70
37fcfee
Sun 11 Sep 2022 03:49:41 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:106:47: error: ‘*map->buckets’ is a pointer; did you mean to use ‘->’?
  106 |     if(map->buckets[i] != NULL && map->buckets->key != NULL){
      |                                               ^~
      |                                               ->
Compilation failed
8d6e96d
Sun 11 Sep 2022 03:49:55 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
b745544
Sun 11 Sep 2022 03:52:56 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  16|1
total_score: 60/70
932e4fb
Sun 11 Sep 2022 04:22:08 AM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:59:3: error: unknown type name ‘pair’; did you mean ‘Pair’?
   59 |   pair ** oldBuckets = map->buckets;
      |   ^~~~
      |   Pair
hashmap.c:59:24: error: initialization of ‘int **’ from incompatible pointer type ‘Pair **’ [-Werror=incompatible-pointer-types]
   59 |   pair ** oldBuckets = map->buckets;
      |                        ^~~
hashmap.c:62:19: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   62 |   map->buckets = (pair **)calloc(map->capacity,sizeof(pair*));
      |                   ^~~~
      |                   Pair
hashmap.c:62:19: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:62:26: error: expected expression before ‘)’ token
   62 |   map->buckets = (pair **)calloc(map->capacity,sizeof(pair*));
      |                          ^
hashmap.c:67:7: error: implicit declaration of function ‘insertmap’; did you mean ‘insertMap’? [-Werror=implicit-function-declaration]
   67 |       insertmap(map, oldBuckets[i]->key, oldBcukets[i]->value);
      |       ^~~~~~~~~
      |       insertMap
hashmap.c:67:35: error: request for member ‘key’ in something not a structure or union
   67 |       insertmap(map, oldBuckets[i]->key, oldBcukets[i]->value);
      |                                   ^~
hashmap.c:67:42: error: ‘oldBcukets’ undeclared (first use in this function); did you mean ‘oldBuckets’?
   67 |       insertmap(map, oldBuckets[i]->key, oldBcukets[i]->value);
      |                                          ^~~~~~~~~~
      |                                          oldBuckets
cc1: all warnings being treated as errors
Compilation failed
6d8526f
